Diverse Korrekturen und Anpassungen

--- a/1_Aufgabenstellung.tex
+++ b/1_Aufgabenstellung.tex
@@ -1,6 +1,6 @@
 \section{Aufgabenstellung} 
 
-Der Verlauf eines Ligretto-Spiel soll simuliert werden können. Um echten Zufall ins Spiel zu bringen, soll das Spiel über mehrere Maschinen verteilt werden
+Der Verlauf eines Ligretto-Spiels soll simuliert werden können. Um echten Zufall ins Spiel zu bringen, soll das Spiel über mehrere Maschinen verteilt werden.
 
  \begin{itemize}
  \item Auf dem \textbf{Eingangsserver} lassen Sie einen Webserver laufen. Ein POST-Request auf den Server initiiert eine Ligretto-Simulation und liefert einen Link über den das Resultat per Polling abgholt werden kann. Das Resultat der Simulation wird  unter diesem Link als XHMTL-Seite präsentiert. Während der Berechnung wird eine Seite mit dem Text \textit{in Bearbeitung} angezeigt.
