--- a/5_Spielalgorithmus.tex
+++ b/5_Spielalgorithmus.tex
@@ -26,14 +26,15 @@ Ist nicht direkt Teil unseres Konzepts, aber wir müssen der KI gewisse Informat
 
 Dazu gehören:
 \begin{itemize}
-\item Spiel-Start Signal
-\item Stapel auf denen sie Karten ablegen könnte
-\item Die Handkarten des Spielers
-\item Das Legen einer Karte auf einen Stapel (Erfolgreich oder nicht)
-\item Zusätzliche Informationen über die Sichtbaren Karten der Nachbarn.
-\item Spiel-Ende Signal
+	\item Spiel-Start Signal
+	\item Stapel auf denen sie Karten ablegen könnte
+	\item Die Handkarten des Spielers
+	\item Das Legen einer Karte auf einen Stapel (Erfolgreich oder nicht)
+	\item Zusätzliche Informationen über die Sichtbaren Karten der Nachbarn.
+	\item Spiel-Ende Signal
 \end{itemize}
 
+\newpage
 
 \subsection{Ablaufdiagramm}
 
@@ -61,10 +62,12 @@ Abbildung~\ref{SequenzdiagramClient} zeigt das Verhalten des Clients gegenüber 
   \centering
   \includegraphics[width=0.80\textwidth,angle=0]{graphics/KarteLegen.png}
   \caption{Sequenzdiagramm zum Legen einer Karte [Papier und Stift FTW] \hfill{} }
-   \label{SequenzdiagramClient}
- \end{figure}
+  \label{SequenzdiagramClient}
+\end{figure}
+
+\newpage
  
-\subsection{Graphik}
+\subsection{Sequenzdiagramm}
 
 Abbildung~\ref{SequenzdiagramServer} zeigt das Verhalten des Servers gegenüber den Clients. 
 
