--- a/3_Problemanalyse.tex
+++ b/3_Problemanalyse.tex
@@ -2,21 +2,20 @@
 
 %allgemein, was muss analysiert werden
 
-Als Aufgabe gilt es, den Ablauf, der durch die Spielregeln festgelegt ist, anhand folgender Gesichtspunkte in einen Algorithmus umzusetzen:
-
+Als Aufgabe gilt es den durch die Spielregeln festgelegten Ablauf anhand folgender Gesichtspunkte in einen Algorithmus umzusetzen:
 
 \begin{enumerate}
-	\item Der Spielablauf muss den Spielregeln entsprechen und die KI-Algorithme, welche die Mitspieler simulieren, sollten nur an Informationen über den Spielablauf gelangen, welche auch ein menschlicher Spieler gelangen würde.
+	\item Der Spielablauf muss den Spielregeln entsprechen und die KI-Algorithmen, welche die Mitspieler simulieren, sollten nur an Informationen über den Spielablauf gelangen, welche auch ein menschlicher Spieler gelangen würde.
 	\item Der Spielablauf sollte möglichst fair sein. D.h. bis auf den Zufall, der durch das Mischen der Karten ins Spiel gelangt, sollten alle Mitspieler gleichgestellt sein.
-	\item Die verwendeten Algorithmen und Schnittstellen sollten möglichst gut mit der Anzahl Mitspieler skalieren, unter Betrachtung der benötignen Rechenzeit und Netzerkkapazität.
+	\item Die verwendeten Algorithmen und Schnittstellen sollten möglichst gut mit der Anzahl Mitspieler skalieren, unter Betrachtung der benötigten Rechenzeit und Netzwerkkapazität.
 \end{enumerate}
 
 Folgende Punkte werden bei der Herleitung des Algorithmus nicht betrachtet:
 
 \begin{enumerate}
-	\item Alle Mitspieler müssen sich an die Spielregeln halten, insbesonder in Teilen des Ablaufs, die im Spiel mit menschlichen Spielern nicht überwacht werden können. Dazu gehör z.B. das regelkonforme Ablegen der Handkarten beim suchen einer passenden Karte.
-	\item Die beiligten Server versenden nur Nachrichten an Server, mit denen sie laut dem Alogrithmus kommunizieren dürfen.
-	\item Die eingesetzte Software und Hardware darf keine Fehler aufweisen und der Netzerkverkehr darf nicht gestört oder unterbrochen werden. D.h. z.B. keine Pakete dürfen verloren gehen.
+	\item Alle Mitspieler müssen sich an die Spielregeln halten, insbesondere in Teilen des Ablaufs, die im Spiel mit menschlichen Spielern nicht überwacht werden können. Dazu gehört z.B. auch das regelkonforme Ablegen der Handkarten beim suchen einer passenden Karte.
+	\item Die beiligten Geräte versenden nur Nachrichten an Geräte, mit denen sie laut dem Alogrithmus kommunizieren dürfen.
+	\item Die eingesetzte Soft- und Hardware darf keine Fehler aufweisen und der Netzerkverkehr darf nicht gestört oder unterbrochen werden (z.B. dürfen keine Pakete verloren gehen).
 \end{enumerate}
 
 %Für die letzten beiden Punkte wird anschliessend eine Diskusion gegeben, inwiefern der Alogorithmus und die Schnittstellen angepasst werden müssten, um ...
@@ -25,13 +24,15 @@ Folgende Punkte werden bei der Herleitung des Algorithmus nicht betrachtet:
 
 %welche teile des algorithmus laufen wo
 
-Damit die Laufzeit eines Spiels nicht, oder nur schwach, mit der Anzahl Spieler wächst, muss die Anzahl verwendeter Server linear mit der Anzahl Mitspieler wachsen können. Deshalb ist es notwendig und sinnvoll für jeden Mitspieler mindestens einen, separaten Prozess zu Verwenden.
+Damit die Laufzeit eines Spiels nicht (oder nur schwach) mit der Anzahl Spieler wächst, muss die Anzahl verwendeter Computer linear mit der Anzahl Mitspieler wachsen können. Deshalb ist es notwendig und sinnvoll, für jeden Mitspieler mindestens einen separaten Prozess oder Thread zu verwenden.
 
-Da ein einzelner Spieler jedoch zu jeder Zeit immer nur eine Aktion ausführen darf (siehe Spielregeln), ist eine Aufteilung eines einzelenen Spielers in mehrere Prozesse nicht sinnvoll.
+Da ein einzelner Spieler jedoch zu jeder Zeit immer nur eine Aktion ausführen darf (gemäss Spielregeln), ist eine Aufteilung eines einzelenen Spielers in mehrere Prozesse oder Threads nicht sinnvoll.
 
-Zur Überwachung des gesammten Spiels, sowie dessen Aufbau und Abbau, wird ein separater Prozess verwendet. Da der Überwachende Prozess nur vor Spielbeginn und nach Beendigung des Spiels eine Aufgabe hat, dessen Komplexität mit der Anzahl mitspieler wächst, ist eine Aufteilung deiser Aufgaben in mehrere Prozesse zwar erwägenswert, aber nicht von oberster Priorität.
+Zur Überwachung des gesammten Spiels sowie dessen Aufbau und Abbau wird ein separater Prozess verwendet. Da der überwachende Prozess nur vor Spielbeginn und nach Beendigung des Spiels eine Aufgabe hat, dessen Komplexität mit der Anzahl Mitspieler wächst, ist eine Aufteilung dieser Aufgaben in mehrere Prozesse oder Threads zwar erwägenswert, aber nicht von oberster Priorität.
 
 % TODO: Nomenklatur für den Überwachende Prozess und Mitspieler-Prozesse
+
+\newpage
 
 Zusammengefasst:
 
@@ -39,6 +40,7 @@ Zusammengefasst:
 	\item Ein Prozess zur Überwachung des Spiels (Aufbau und Abbau).
 	\item Ein Prozess pro Mitspieler, welche alle Aktionen des jeweiligen Mitspielers durchführt.
 \end{enumerate}
+
 
 \subsection{Verteilung}
 
@@ -48,8 +50,8 @@ Bei der Betrachtung der Verteilung des Zustandes gibt es drei Arten von Objekten
 
 \begin{enumerate}
 	\item {\bf Zustands-Objekte} verkörpern den veränderlichen Zustand eines Spiels. Die Eigenschaften dieser Objekte sind somit mutierbar. Für diese Objekte ist immer genau ein Prozess zuständig und diese Objekte werden auf andere Prozesse verschoben oder kopiert.
-	\item {\bf Token-Objekte} werden zur Kommunikation verwendet und sind nicht weränderbar. Token-Objekte können zwischen den Prozessen verschoben werden, jedoch ist immer nur genau ein Prozess für ein jeweiliges Token-Objekt verantwortlich.
-	\item {\bf Transiente Objekte} werden zu Kommunikations-Zwecken und zur unterstützung der Algorithmen erstellt und aufbewahrt. Wenn ein transientes Objekt an einen anderen Prozess versendet wird, dann besitzen beide Prozess eine eigene Kopie des Objektes.
+	\item {\bf Token-Objekte} werden zur Kommunikation verwendet und sind nicht veränderbar. Token-Objekte können zwischen den Prozessen verschoben werden, jedoch ist immer nur genau ein Prozess für ein jeweiliges Token-Objekt verantwortlich.
+	\item {\bf Transiente Objekte} werden zu Kommunikationszwecken und zur Unterstützung der Algorithmen erstellt und aufbewahrt. Wenn ein transientes Objekt an einen anderen Prozess versendet wird, dann besitzen beide Prozess eine eigene Kopie des Objektes.
 \end{enumerate}
 
 Die folgenden Token-Objekte können identifiziert werden:
@@ -68,10 +70,9 @@ Folgende Zustands-Obekte können identifiziert werden:
 
 Zur Kommunikation werden folgende Transiente Objekte erstellt:
 \begin{enumerate}
-	\item Start- und Stop-Signale des überwachenden Prozesses.
-	\item Stop-Signal eines Mitspielers.
-	\item Stapel mit gemischten Karten, welche vom Überwachenden Prozess and die Mitspieler verteilt werden.
-	\item ...
+	\item Start- und Stop-Signale des überwachenden Prozesses
+	\item Stop-Signal eines Mitspielers
+	\item Stapel mit gemischten Karten, welche vom überwachenden Prozess an die Mitspieler verteilt werden
 \end{enumerate}
 
 \subsection{Kommunikation}
@@ -80,10 +81,9 @@ Bei der definition der Kommunikation muss gleichzeitig die Korrektheit und die P
 
 Der Ablauf lässt sich in folgende Abschnitte unterteilen:
 \begin{enumerate}
-	\item Während dem {\bf Aufbau} werden die Spielkarten durch den Server vorbereitet und and die regisrierten Clients verteilt.
-	\item Stop-Signal eines Mitspielers.
-	\item Stapel mit gemischten Karten, welche vom Überwachenden Prozess and die Mitspieler verteilt werden.
-	\item ...
+	\item Während dem {\bf Aufbau} werden die Spielkarten durch den Server vorbereitet und an die registrierten Clients verteilt
+	\item Stop-Signal eines Mitspielers
+	\item Stapel mit gemischten Karten, welche vom Überwachenden Prozess an die Mitspieler verteilt werden
 \end{enumerate}
 
 
@@ -93,49 +93,49 @@ Der Ablauf lässt sich in folgende Abschnitte unterteilen:
 
 Ausgangslage bei Spielbeginn ist folgende:
 \begin{itemize}
-\item Der Server kennt alle Spieler, die an dieser Spielrunde teilnehmen.
-\item Dem Server stehen eine entsprechende Anzahl gut gemischter Kartendecks zur Verfügung.
-\item Kommunikationsgrundlagen (Netzwerk, RMIRegistry, etc...) sind gegeben.
+	\item Der Server kennt alle Spieler, die an dieser Spielrunde teilnehmen.
+	\item Dem Server stehen eine entsprechende Anzahl gut gemischter Kartendecks zur Verfügung.
+	\item Kommunikationsgrundlagen (Netzwerk, RMIRegistry, etc...) sind gegeben.
 \end{itemize}
 
 \subsubsection{Spielinitialisierung}
-Zuerst initialisiert der Server alle ihm bekannten Spieler, indem er über RMI deren init-Methode aufruft. Dabei werden sämtliche Informationen, die ein Spieler kenne muss, übermittelt. (Referenz zum Server und zu den Mitspielern, die gemischten Karten)
+Zuerst initialisiert der Server alle ihm bekannten Spieler, indem er über RMI deren \textit{init}-Methode aufruft. Dabei werden sämtliche Informationen, die ein Spieler kennen muss, übermittelt (Referenz zum Server und zu den Mitspielern, die gemischten Karten).
 
 \subsubsection{Spielstart}
-Nach der Initialisierung werden alle Spieler über den Spielstart informiert. Dies geschieht über den Remoteaufruf der Methode spielStart.
+Nach der Initialisierung werden alle Spieler über den Spielstart informiert. Dies geschieht über den Remoteaufruf der Methode \textit{spielStart}.
 
 \subsubsection{Während des Spiels}
-Sobald ein Spieler über den Spielstart informiert wurde, versucht er der Reihe nach die Karten aus seinen Spielslots oder jene aus seinem Handstapel auf einen eigenen oder den Stapel eines Nachbarn zu legen. Für einen Versuch auf dem eigenen Stapel ist kein Remoteaufruf nötig. Um die Karte bei einem Nachbarn zu platzieren, wird diesem die Karte mittels Aufruf der Methode legeKarte übergeben. Hat die Karte auf einem Stapel platzgefunden, so bestätigt das der Empfänger der Karte mit true, ansonsten gibt er false zurück und die Karte geht wieder zurück in den Slot bzw. in den Handkartenstapel.
+Sobald ein Spieler über den Spielstart informiert wurde, versucht er der Reihe nach, die Karten aus seinen Spielslots oder jene aus seinem Handstapel auf einen eigenen oder den Stapel eines Nachbarn zu legen. Für einen Versuch auf dem eigenen Stapel ist kein Remoteaufruf nötig. Um die Karte bei einem Nachbarn zu platzieren, wird diesem die Karte mittels Aufruf der Methode \textit{legeKarte} übergeben. Hat die Karte auf einem Stapel platz gefunden, so bestätigt dies der Empfänger der Karte mit \textit{true}, ansonsten gibt er \textit{false} zurück und die Karte geht wieder zurück in den Slot bzw. in den Handkartenstapel.
 
 \subsubsection{Ligretto Stop!}
-Ist der Ligrettostapel eines Spielers leer, so ruft er die ligrettoStop-Methode des Servers auf. Dieser übermittelt diese Botschaft allen Spielern, indem er deren spielEnde-Methode aufruft.
+Ist der Ligrettostapel eines Spielers leer, so ruft er die \textit{ligrettoStop}-Methode des Servers auf. Dieser übermittelt diese Botschaft allen Spielern, indem er deren \textit{spielEnde}-Methode aufruft.
 
 \subsubsection{Punkte zählen}
-Nach Spielende, ruft der Server von allen Spielern den Punktestand ab. Dies geschieht über dem RMI-Aufruf der Methode getPunkte.
+Nach Spielende ruft der Server von allen Spielern den Punktestand ab. Dies geschieht über dem RMI-Aufruf der Methode \textit{getPunkte}.
 
 
 \subsection{Concurrency-Problem}
 
 \subsubsection{Gleichzeitiges Legen einer Karte}
-Es kommt vor, dass zwei Spieler gleichzeitig versuchen die selbe Karte auf den selben Stapel zu legen. Wie im echten Spiel gilt auch in der Spielsimlulation: "First come first served". Dabei werden alle RMI-Methoden mit dem \textbf{synchronized}-Schlüsselwort synchronisiert.
+Es kommt vor, dass zwei Spieler gleichzeitig versuchen, die selbe Karte auf den selben Stapel zu legen. Wie im echten Spiel gilt auch in der Spielsimlulation: \textbf{First come first served}. Dabei werden alle RMI-Methoden mit dem \textit{synchronized}-Schlüsselwort synchronisiert.
 
 \subsubsection{Spielstop währenddem eine Karte gelegt wird}
-Wird das Spiel während einem Versuch, eine Karte auf den Stapel zu legen beendet, darf die Karte gemäss Spielregeln nicht mehr gelegt werden. Dies kann erreicht werden, indem man die Erfolgsmeldung mit dem Spielstatus verknüpft. Ist das Spiel beim Aufruf der legeKarte-Methode beendet, wird in jedem Fall false zurückgegeben, beziehungsweise der legende Spieler interpretiert es als false.
+Wird das Spiel während einem Versuch, eine Karte auf den Stapel zu legen, beendet, darf die Karte gemäss Spielregeln nicht mehr gelegt werden. Dies kann erreicht werden, indem man die Erfolgsmeldung mit dem Spielstatus verknüpft. Ist das Spiel beim Aufruf der \textit{legeKarte}-Methode beendet, wird in jedem Fall \textit{false} zurückgegeben, beziehungsweise der legende Spieler interpretiert es als \textit{false}.
 
 \subsection{Zuverlässigkeit}
 
 \subsubsection{Verlorenes Netzwerkpaket}
-Da wir uns für den Einsatz von RMI entschieden haben, brauchen wir uns um Paketverlust etc. keine Gedanken zu machen. RMI benutzt TCP zur Kommunikation und stellt somit die Übermittlung einer Nachricht sicher.
+Da wir uns für den Einsatz von RMI entschieden haben, brauchen wir uns um Paketverlust, Korrektheit der Daten, etc. keine Gedanken zu machen. RMI benutzt TCP zur Kommunikation und stellt somit die korrekte Übermittlung einer Nachricht sicher.
 
 \subsubsection{Absturz eines Spielers}
-Stürzt ein Spieler während des Spiels ab, so beeinträchtigt das den Verlauf des Spiels nicht. Um eine lange Antwortzeit beim Legen einer Karte zu vermeiden werden ihn seine Nachbarn für weitere Anfrageversuche ignorieren.
+Stürzt ein Spieler während des Spiels ab, so beeinträchtigt dies den Verlauf des Spiels nicht. Um eine lange Antwortzeit beim Legen einer Karte zu vermeiden, werden ihn seine Nachbarn für weitere Anfrageversuche ignorieren.
 
 \subsubsection{Absturz des Servers}
-Da der Server für die Übermittlung der Ligretto-Stop-Nachricht verantwortlich ist, hätte ein Serverabsturz zur Folge dass alle Spieler Spielen, bis sie ihren Ligrettostapel abgearbeitet haben, und dann beim Aufruf der ligrettoStop-Methode erfahren, dass der Server keine Antwort mehr gibt. Der Spielausgang wäre damit verfälscht und nicht brauchbar.
+Da der Server für die Übermittlung der Ligretto-Stop-Nachricht verantwortlich ist, hätte ein Serverabsturz zur Folge, dass alle Spieler spielen, bis sie ihren Ligrettostapel abgearbeitet haben, und dann beim Aufruf der \textit{ligrettoStop}-Methode erfahren, dass der Server keine Antwort mehr gibt. Der Spielausgang wäre damit verfälscht und nicht brauchbar.
 
-\subsection{Skallierbarkeit}
+\subsection{Skalierbarkeit}
 
-Gemäss Spielregeln braucht es mindestens zwei Spieler für ein Ligrettospiel. Mit nur zwei Spielern ist die Chance jedoch hoch, dass das Spiel nicht zuende gespielt werden kann, da die Karten ungünstig liegen und damit ein Deadlock entsteht. Gegen oben existieren keine Grenzen. Dadurch dass nur eine Kommunikation mit einer konstanten Anzahl Nachbarn erfolgt, bleibt die Netzwerkauslastung und der Rechenaufwand pro Spieler auch bei steigender Anzahl Gegner konstant. Je nach Implementation können Nachrichten, welche an alle Spieler gehen (spielStart und spielEnde) durch Grenzen der Netzwerkgeschwindigkeit etwas verspätet eintreffen.
+Gemäss Spielregeln braucht es mindestens zwei Spieler für ein Ligrettospiel. Mit nur zwei Spielern ist die Chance jedoch hoch, dass das Spiel nicht zu Ende gespielt werden kann, da die Karten ungünstig liegen und damit ein Deadlock entsteht. Gegen oben existieren keine Grenzen. Da nur eine Kommunikation mit einer konstanten Anzahl Nachbarn erfolgt, bleibt die Netzwerkauslastung und der Rechenaufwand pro Spieler auch bei steigender Anzahl Gegner konstant. Je nach Implementation können Nachrichten, welche an alle Spieler gehen (\textit{spielStart} und \textit{spielEnde}) durch Grenzen der Netzwerkgeschwindigkeit etwas verspätet eintreffen.
 
 %Bewertungsmassstab:
 % Bei Ligretto berücksichtigen, dass die Anzahl Spieler steigen kann.
