~ graphics/KarteLegen as Vektor-Grafik

--- a/5_Spielalgorithmus.tex
+++ b/5_Spielalgorithmus.tex
@@ -73,7 +73,7 @@ Abbildung~\ref{SequenzdiagramClient} zeigt das Verhalten des Clients gegenüber 
 
 \begin{figure}[H]
   \centering
-  \includegraphics[width=0.80\textwidth,angle=0]{graphics/KarteLegen.png}
+  \includegraphics[width=0.60\textwidth,angle=0]{graphics/KarteLegen.pdf}
   \caption{Sequenzdiagramm zum Legen einer Karte [Papier und Stift FTW] \hfill{} }
   \label{SequenzdiagramClient}
 \end{figure}
