added picture and references

--- a/2_Spielbeschreibung.tex
+++ b/2_Spielbeschreibung.tex
@@ -6,12 +6,13 @@
   \caption{Ligretto \hfill{} }
  \end{figure}
 
-Ligretto ist ein Spiel, bei dem es darum geht, seinen eigenen Ligretto Stapel abzubauen, bevor dies ein Gegner erreicht. Der Ligretto Stapel besteht aus 10 verdeckten zufälligen Karten aus dem Kartenvorrat des Spielers. Der Kartenvorrat eines Spielers (auch Deck genannt), besteht aus 40 Karten. Die Karten sind von 1 bis 10 nummeriert und haben die folgenden vier Farben: Rot, Gelb, Blau und Grün. Es gibt keine doppelten Karten, das heisst, jede Karte kommt nur genau einmal im Deck des Spielers sowie im ganzen Spiel vor.
+Ligretto ist ein Spiel, bei dem es darum geht, seinen eigenen Ligretto Stapel abzubauen, bevor dies ein Gegner erreicht. Der Ligretto Stapel besteht aus 10 verdeckten zufälligen Karten aus dem Kartenvorrat des Spielers. Der Kartenvorrat eines Spielers (auch Deck genannt), besteht aus 40 Karten. Die Karten sind von 1 bis 10 nummeriert und haben die folgenden vier Farben: Rot, Gelb, Blau und Grün (Abbildung~\ref{beschkarten}). Es gibt keine doppelten Karten, das heisst, jede Karte kommt nur genau einmal im Deck des Spielers sowie im ganzen Spiel vor.
 
 \begin{figure}[hbt]
   \centering
   \includegraphics[width=0.20\textwidth,angle=0]{graphics/ligretto.png}
   \caption{Ligretto Karten \hfill{} }
+  \label{beschkarten}
 \end{figure}
 
 Um ein neues Spiel vorzubereiten, mischt jeder Spieler seinen Kartenstapel. Jeder Spieler zählt dann 10 Karten ab und legt diese verdeckt vor sich hin. Dies ist sein eigenes Ligretto Deck. Danach legt er 4 Karten von seinen restlichen Handkarten offen neben den Stapel. Sobald alle Spieler soweit sind, geht es los.
