--- a/4_Loesungsansatz.tex
+++ b/4_Loesungsansatz.tex
@@ -1,11 +1,12 @@
 \section{Lösungsansatz} 
 
-Client 1 hat vom Server Client 2 bis Client 7 als Nachbarn zugewiesen bekommen. Als erstes selektiert der Client 1 eine Karte und versucht diese bei sich selbst Legen. Gelingt dies nicht, versucht er die Karte bei einem seiner 6 Nachbarn zu legen, indem er ihnen die Karte übergibt und, falls sie gelegt werden konnte, eine Erfolgsmeldung (\textit{true}) oder ansonsten eine Misserfolgsmeldung (\textit{false}) zurückbekommt. Konnte er die selektierte Karte legen, wird diese gelöscht und eine neue Karte wird selektiert, mit welcher wieder von vorne begonnen wird. Das Beispiel von Client 1 ist representativ für alle Clients. 
+Client 1 hat vom Server Client 2 bis Client 7 als Nachbarn zugewiesen bekommen (Abbildung~\ref{clientkartelegenablauf}). Als erstes selektiert der Client 1 eine Karte und versucht diese bei sich selbst Legen. Gelingt dies nicht, versucht er die Karte bei einem seiner 6 Nachbarn zu legen, indem er ihnen die Karte übergibt und, falls sie gelegt werden konnte, eine Erfolgsmeldung (\textit{true}) oder ansonsten eine Misserfolgsmeldung (\textit{false}) zurückbekommt. Konnte er die selektierte Karte legen, wird diese gelöscht und eine neue Karte wird selektiert, mit welcher wieder von vorne begonnen wird. Das Beispiel von Client 1 ist representativ für alle Clients. 
 
 \begin{figure}[hbt]
   \centering
   \includegraphics[width=0.90\textwidth,angle=0]{graphics/Kartenlegen_Sequenzdiagramm.png}
   \caption{Sequenzdiagramm: Kartenlegen}
+  \label{clientkartelegenablauf}
 \end{figure}
 
 Dadurch, dass nicht zuerst der Status der Spiel-Stapel der Nachbarn abgefragt werden muss und danach versucht wirde eine Karte zu lege, ist die Kommunikation auf den Versuch einfach eine Karte zu legen minimiert. Es wird also nur eine Karte übertragen und entweder "true" für den Erfolg oder "false" für den Misserfolg zurückgegeben.
