- README - 1 kleiner Schreibfehler

--- a/3_Problemanalyse.tex
+++ b/3_Problemanalyse.tex
@@ -59,7 +59,7 @@ Die folgenden Token-Objekte können identifiziert werden:
 	\item Spielkaren: Zu beginn des Spieles wird für jede Spielkarte, welche in einen realen Ligretto-Spiel verwerdet würde, ein Spielkarten-Objekt erstellt.
 \end{enumerate}
 
-Folgende Zustands-Obekte können identifiziert werden:
+Folgende Zustands-Objekte können identifiziert werden:
 \begin{enumerate}
 	\item Handkarten-Stapel
 	\item Ausgelegte Karten vor dem Mitspieler
