PNG-Grafiken durch PDF-Grafiken ersetzt. Schreibfehler in SpielLayout.vsd behoben.

--- a/4_Loesungsansatz.tex
+++ b/4_Loesungsansatz.tex
@@ -4,7 +4,7 @@ Client 1 hat vom Server Client 2 bis Client 7 als Nachbarn zugewiesen bekommen (
 
 \begin{figure}[hbt]
   \centering
-  \includegraphics[width=0.90\textwidth,angle=0]{graphics/Kartenlegen_Sequenzdiagramm.png}
+  \includegraphics[width=0.90\textwidth,angle=0]{graphics/Kartenlegen_Sequenzdiagramm.pdf}
   \caption{Sequenzdiagramm: Kartenlegen}
   \label{clientkartelegenablauf}
 \end{figure}
