--- a/5_Spielalgorithmus.tex
+++ b/5_Spielalgorithmus.tex
@@ -42,7 +42,7 @@ Abbildung~\ref{SequenzdiagramServer} zeigt das Verhalten des Servers gegenüber 
 
 \begin{figure}[H]
   \centering
-  \includegraphics[width=0.80\textwidth,angle=0]{graphics/Spielablauf_Sequenzdiagramm.png}
+  \includegraphics[width=0.80\textwidth,angle=0]{graphics/Spielablauf_Sequenzdiagramm.pdf}
   \caption{Sequenzdiagramm für den Spielablauf aus Serversicht\hfill{} }
   \label{SequenzdiagramServer}
 \end{figure} 
