--- a/7_ErwartetesErgebnis.tex
+++ b/7_ErwartetesErgebnis.tex
@@ -4,7 +4,7 @@ Unser geplantes Spiellayout sieht vor, dass jeder Client eigentlich nur bis zu 6
 
 \begin{figure}[hbt]
   \centering
-  \includegraphics[width=0.9\textwidth,angle=0]{graphics/SpielLayout.png}
+  \includegraphics[width=0.9\textwidth,angle=0]{graphics/SpielLayout.pdf}
   \caption{Spiel aus Client-Sicht \hfill{} }
   \label{ergebnisspiellayout}
 \end{figure}
