~ graphiken/latency geflickt

--- a/7_ErwartetesErgebnis.tex
+++ b/7_ErwartetesErgebnis.tex
@@ -38,7 +38,7 @@ Dadurch ergibt sich pro Client ein Zeitzuwachs für das Verteilen des \textit{Sp
 
 \begin{figure}[hbt]
   \centering
-  \includegraphics[width=0.9\textwidth,angle=0]{graphics/latency.png}
+  \includegraphics[width=0.8\textwidth,angle=0]{graphics/latency.pdf}
   \caption{Zeit für das Verteilen des Start- oder Endsignals \hfill{} }
   \label{ergebnislatency}
  \end{figure}
